testdata/baselines/reference/compiler/tluaVarargUnused.errors.txt
tluaVarargUnused.tlua(13,25): error TS6133: 'a' is declared but its value is never read.


==== tluaVarargUnused.tlua (1 errors) ====
    // A vararg is never an unused parameter. It has no name, so there is no `_`
    // prefix to opt out with and no zero-width span worth reporting on, and
    // accepting-and-ignoring `...` is ordinary Lua. Both of these are clean.
    function usesVararg(...: number): (number | nil)
      local first = ...;
      return first;
    end
    
    function ignoresVararg(...: number): void
    end
    
    // Ordinary parameters are still reported.
    function unusedOrdinary(a: number, ...: number): void
                            ~
!!! error TS6133: 'a' is declared but its value is never read.
    end
    
    return { usesVararg = usesVararg, ignoresVararg = ignoresVararg, unusedOrdinary = unusedOrdinary };
    